Code Cleanup : Formatting

--- a/report/report.html
+++ b/report/report.html
@@ -2,155 +2,161 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<title>Report</title>
-	<link href="https://fonts.googleapis.com/css?family=Questrial&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-	<style>
-		body {
-			background-color: teal;
-			color: aliceblue;
-			font-family: 'Questrial', sans-serif;
-			margin: 5%;
-			font-size: 1.5em;
-		}
+    <meta charset="UTF-8">
+    <title>Report</title>
+    <link href="https://fonts.googleapis.com/css?family=Questrial&display=swap" rel="stylesheet">
+    <link href="https://www.w3schools.com/w3css/4/w3.css" rel="stylesheet">
+    <style>
+        body {
+            background-color: teal;
+            color: aliceblue;
+            font-family: 'Questrial', sans-serif;
+            margin: 5%;
+            font-size: 1.5em;
+        }
 
-	</style>
+    </style>
 </head>
 
 <body>
 
-	<h1>Report - Sequenz - CSD2500 - Mithun Shanoj - M00739358</h1>
+<h1>Report - Sequenz - CSD2500 - Mithun Shanoj - M00739358</h1>
 
-	<div class="w3-panel w3-border w3-pale-blue w3-round-large">
-		<h3>Structure Elements - What types and where are they used?</h3>
-		<ol>
-			<li>header - common.php</li>
-			<li>article - index.php,leaderboard.php, game.php</li>
-			<li>footer - index.php</li>
-			<li>nav - common.php</li>
-			<li>section - about.php</li>
-		</ol>
-	</div>
+<div class="w3-panel w3-border w3-pale-blue w3-round-large">
+    <h3>Structure Elements - What types and where are they used?</h3>
+    <ol>
+        <li>header - common.php</li>
+        <li>article - index.php,leaderboard.php, game.php</li>
+        <li>footer - index.php</li>
+        <li>nav - common.php</li>
+        <li>section - about.php</li>
+    </ol>
+</div>
 
-	<br>
+<br>
 
-	<div class="w3-panel w3-border w3-pale-blue w3-round-large">
-		<h3>Content Elements - What types and where are they used?</h3>
-		<ol>
-			<li>img - index.php, leaderboard.php, game.php</li>
-			<li>div - index.php, leaderboard.php, login.php, game.php, about.php</li>
-			<li>span - index.php</li>
-			<li>a - common.php</li>
-			<li>table - leaderboard.php</li>
-			<li>form - login.php</li>
-			<li>p - game.php</li>
-			<li>text - common.php</li>
-			<li>svg - common.php</li>
-			<li>defs - common.php</li>
-			<li>linearGradient- common.php</li>
-			<li>pattern - common.php</li>
-			<li>path - common.php</li>
-			<li>text - common.php</li>
-		</ol>
-	</div>
+<div class="w3-panel w3-border w3-pale-blue w3-round-large">
+    <h3>Content Elements - What types and where are they used?</h3>
+    <ol>
+        <li>img - index.php, leaderboard.php, game.php</li>
+        <li>div - index.php, leaderboard.php, login.php, game.php, about.php</li>
+        <li>span - index.php</li>
+        <li>a - common.php</li>
+        <li>table - leaderboard.php</li>
+        <li>form - login.php</li>
+        <li>p - game.php</li>
+        <li>text - common.php</li>
+        <li>svg - common.php</li>
+        <li>defs - common.php</li>
+        <li>linearGradient- common.php</li>
+        <li>pattern - common.php</li>
+        <li>path - common.php</li>
+        <li>text - common.php</li>
+    </ol>
+</div>
 
-	<br>
+<br>
 
-	<div class="w3-panel w3-border w3-pale-blue w3-round-large">
-		<h3>Page Design - What CSS formatting are used to improve page design? Where are they used?</h3>
-		<p>Various tags are used together to make sure the website had a seamless and beautiful user interface. Some of the most used ones are:</p>
-		<ol>
-			<li>padding - index.php, leaderboard.php, login.php, game.php, about.php</li>
-			<li>border-radius - index.php, leaderboard.php, login.php, game.php, about.php</li>
-			<li>margin - index.php, leaderboard.php, login.php, game.php, about.php</li>
-			<li>color - index.php, leaderboard.php, login.php, game.php, about.php</li>
-			<li>transition - login.php, about.php</li>
-		</ol>
-	</div>
+<div class="w3-panel w3-border w3-pale-blue w3-round-large">
+    <h3>Page Design - What CSS formatting are used to improve page design? Where are they used?</h3>
+    <p>Various tags are used together to make sure the website had a seamless and beautiful user interface. Some of the
+        most used ones are:</p>
+    <ol>
+        <li>padding - index.php, leaderboard.php, login.php, game.php, about.php</li>
+        <li>border-radius - index.php, leaderboard.php, login.php, game.php, about.php</li>
+        <li>margin - index.php, leaderboard.php, login.php, game.php, about.php</li>
+        <li>color - index.php, leaderboard.php, login.php, game.php, about.php</li>
+        <li>transition - login.php, about.php</li>
+    </ol>
+</div>
 
-	<br>
+<br>
 
-	<div class="w3-panel w3-border w3-pale-blue w3-round-large">
-		<h3>What are the classes and ID and where are they used? Why the class/ID is needed?</h3>
-		<ol>
-			<li>logo - ID - common.php</li>
-			<li>selected - ID - common.php</li>
-			<li>illustrations - ID - index.php, game.php, leaderboard.php</li>
-			<li>tagline - Class - index.php, game.php</li>
-			<li>w3-container w3-center w3-animate-opacity w3-animate-right - Class - used everywhere</li>
-			<li>left - ID - used everywhere</li>
-			<li>right - ID - used everywhere</li>
-			<li>leaderboard - ID - leaderboard.php</li>
-			<li>login - Class - login.php</li>
-			<li>register - Class - login.php</li>
-			<li>ins-container - Class - about.php</li>
-			<li>ins-txt - ID - about.php</li>
-		</ol>
-		<p>These were ID's and Classes were needed for organising and tagging elements for styling purpses</p>
-	</div>
+<div class="w3-panel w3-border w3-pale-blue w3-round-large">
+    <h3>What are the classes and ID and where are they used? Why the class/ID is needed?</h3>
+    <ol>
+        <li>logo - ID - common.php</li>
+        <li>selected - ID - common.php</li>
+        <li>illustrations - ID - index.php, game.php, leaderboard.php</li>
+        <li>tagline - Class - index.php, game.php</li>
+        <li>w3-container w3-center w3-animate-opacity w3-animate-right - Class - used everywhere</li>
+        <li>left - ID - used everywhere</li>
+        <li>right - ID - used everywhere</li>
+        <li>leaderboard - ID - leaderboard.php</li>
+        <li>login - Class - login.php</li>
+        <li>register - Class - login.php</li>
+        <li>ins-container - Class - about.php</li>
+        <li>ins-txt - ID - about.php</li>
+    </ol>
+    <p>These were ID's and Classes were needed for organising and tagging elements for styling purpses</p>
+</div>
 
-	<br>
+<br>
 
-	<div class="w3-panel w3-border w3-pale-blue w3-round-large">
-		<h3>Grid Layout - what is the layout method used and which page/where is it used</h3>
-		<p>CSS grids was the layout method used for this website. It can be seen in:</p>
-		<ol>
-			<li>login.php</li>
-			<li>about.php</li>
-		</ol>
-	</div>
+<div class="w3-panel w3-border w3-pale-blue w3-round-large">
+    <h3>Grid Layout - what is the layout method used and which page/where is it used</h3>
+    <p>CSS grids was the layout method used for this website. It can be seen in:</p>
+    <ol>
+        <li>login.php</li>
+        <li>about.php</li>
+    </ol>
+</div>
 
-	<br>
+<br>
 
-	<div class="w3-panel w3-border w3-pale-blue w3-round-large">
-		<h3>PHP Functions - File containing the function, function name, what it does, and any known error.</h3>
-		<p>All PHP functions are contained in common.php. They are:</p>
-		<ol>
-			<li>outputHeader - Sets website title, and start html/head tags for all the web page and also link to the stylesheet</li>
-			<li>outputBannerNavigation - Set navigation bar for all web pages</li>
-			<li>outputFooter - Closes the body and html tag and ends the web page</li>
-		</ol>
-		<p>No known errors</p>
-	</div>
+<div class="w3-panel w3-border w3-pale-blue w3-round-large">
+    <h3>PHP Functions - File containing the function, function name, what it does, and any known error.</h3>
+    <p>All PHP functions are contained in common.php. They are:</p>
+    <ol>
+        <li>outputHeader - Sets website title, and start html/head tags for all the web page and also link to the
+            stylesheet
+        </li>
+        <li>outputBannerNavigation - Set navigation bar for all web pages</li>
+        <li>outputFooter - Closes the body and html tag and ends the web page</li>
+    </ol>
+    <p>No known errors</p>
+</div>
 
-	<br>
+<br>
 
-	<div class="w3-panel w3-border w3-pale-blue w3-round-large">
-		<h3>Reusable PHP functions - File containing the function, function name, what it does, and any known error.</h3>
-		<p>All PHP functions are contained in common.php, They're called from all webpages. They are:</p>
-		<ol>
-			<li>outputHeader - Sets website title, and start html/head tags for all the web page and also link to the stylesheet</li>
-			<li>outputFooter - Closes the body and html tag and ends the web page</li>
-		</ol>
-		<p>No known errors</p>
-	</div>
+<div class="w3-panel w3-border w3-pale-blue w3-round-large">
+    <h3>Reusable PHP functions - File containing the function, function name, what it does, and any known error.</h3>
+    <p>All PHP functions are contained in common.php, They're called from all webpages. They are:</p>
+    <ol>
+        <li>outputHeader - Sets website title, and start html/head tags for all the web page and also link to the
+            stylesheet
+        </li>
+        <li>outputFooter - Closes the body and html tag and ends the web page</li>
+    </ol>
+    <p>No known errors</p>
+</div>
 
-	<br>
+<br>
 
-	<div class="w3-panel w3-border w3-pale-blue w3-round-large">
-		<h3>File Structure</h3>
-		<p>All files are stored in an organised manner for easy access.</p>
-		<img style="width: 70%" src="fs.png"></img>
-	</div>
+<div class="w3-panel w3-border w3-pale-blue w3-round-large">
+    <h3>File Structure</h3>
+    <p>All files are stored in an organised manner for easy access.</p>
+    <img src="fs.png" style="width: 70%"></img>
+</div>
 
-	<div class="w3-panel w3-border w3-pale-blue w3-round-large">
-		<h3>Screenshots</h3>
-		<img class="w3-round" style="width: 40%; margin: 2%;" src="ss/1.png"></img>
-		<img class="w3-round" style="width: 40%; margin: 2%;" src="ss/2.png"></img>
-		<img class="w3-round" style="width: 40%; margin: 2%;" src="ss/3.png"></img>
-		<img class="w3-round" style="width: 40%; margin: 2%;" src="ss/4.png"></img>
-		<img class="w3-round" style="width: 40%; margin: 2%;" src="ss/5.png"></img>
-	</div>
+<div class="w3-panel w3-border w3-pale-blue w3-round-large">
+    <h3>Screenshots</h3>
+    <img class="w3-round" src="ss/1.png" style="width: 40%; margin: 2%;"></img>
+    <img class="w3-round" src="ss/2.png" style="width: 40%; margin: 2%;"></img>
+    <img class="w3-round" src="ss/3.png" style="width: 40%; margin: 2%;"></img>
+    <img class="w3-round" src="ss/4.png" style="width: 40%; margin: 2%;"></img>
+    <img class="w3-round" src="ss/5.png" style="width: 40%; margin: 2%;"></img>
+</div>
 
-	<br>
+<br>
 
-	<div class="w3-panel w3-border w3-pale-blue w3-round-large">
-		<h3>3rd Party Library Used - W3.CSS Framework</h3>
-		<p>W3.CSS is a modern CSS framework that contains different forms of animations, forms, pre-made banners and panes. <br>
-			This framework was used in all pages for animations purposes exclusively.</p>
-		<a href="https://www.w3schools.com/w3css/default.asp">Framework Website</a>
-	</div>
+<div class="w3-panel w3-border w3-pale-blue w3-round-large">
+    <h3>3rd Party Library Used - W3.CSS Framework</h3>
+    <p>W3.CSS is a modern CSS framework that contains different forms of animations, forms, pre-made banners and panes.
+        <br>
+        This framework was used in all pages for animations purposes exclusively.</p>
+    <a href="https://www.w3schools.com/w3css/default.asp">Framework Website</a>
+</div>
 </body>
 
 </html>
