--- a/report - website/report.html
+++ b/report - website/report.html
@@ -20,7 +20,7 @@
 
 <body>
 
-<h1>Report - Memorize - CSD2500 - Mithun Shanoj - M00739358</h1>
+<h1>Website Report - Memorize - CSD2500 - Mithun Shanoj - M00739358</h1>
 
 <div class="w3-panel w3-border w3-pale-blue w3-round-large">
     <h3>Structure Elements - What types and where are they used?</h3>
